--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
             <version>2.2.1-b03</version>
         </dependency>
 
+        <!-- spring session -->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
+
         <!-- 读取配置信息 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -131,6 +137,16 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>4.0.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.prometheus</groupId>
+            <artifactId>simpleclient_spring_boot</artifactId>
+            <version>0.0.26</version>
         </dependency>
     </dependencies>
 
