--- a/src/main/resources/application-online.yml
+++ b/src/main/resources/application-online.yml
@@ -1,18 +1,10 @@
 spring:
-  ## 数据源配置
-  datasource:
-    url: jdbc:mysql://localhost:3306/example?useUnicode=true&characterEncoding=utf8
-    username: root
-    password: alsm
-    driver-class-name: com.mysql.jdbc.Driver
-
-
   ## Redis 配置
   ## Redis数据库索引（默认为0）
   redis:
     database: 0
     ## Redis服务器地址
-    host: 127.0.0.1
+    host: 127.0.0.1(根据自身项目更换)
     ## Redis服务器连接端口
     port: 6379
     ## Redis服务器连接密码（默认为空）
@@ -21,20 +13,24 @@ spring:
     jedis:
       pool:
         max-active: -1
-        ## 连接池最大阻塞等待时间（使用负值表示没有限制）
-        max-wait: -1
         ## 连接池中的最大空闲连接
         max-idle: 50
         ## 连接池中的最小空闲连接
         min-idle: 0
-        ## 连接超时时间（毫秒）
-    timeout: 0
+
+  session:
+    store-type: redis
+    redis:
+      flush-mode: on_save
+  ## 缓存配置 开发阶段应该配置为false 因为经常会改
+  freemarker:
+    cache: false
 
   ##mail配置
   mail:
-    host: smtp.163.com
-    username: guochaojava@163.com
-    password: xxxxxxxxxxxxxxxxxxx
+    host: smtp.163.com(根据自身项目更换)
+    username: email-username(根据自身项目更换)
+    password: email-password(根据自身项目更换)
     properties:
       mail:
         smtp:
@@ -45,25 +41,52 @@ spring:
 
 ## Mybatis 配置
 mybatis:
-  typeAliasesPackage: com.example.guochaojava.model
+  typeAliasesPackage: com.example.demo.model
   mapperLocations: classpath:mapper/*.xml
 
-#guochaojava 配置
-guochaojava:
+
+
+#自定义 配置
+example:
   redis:
     expire: 1800
   cookie:
-    domain: localhost
+    domain: localhost(根据自身项目更换)
   jwt:
-    key: guochao@2018!
+    key: token-key(根据自身项目更换)
     #jwt token 有效时长（毫秒）
-    exp: 1800000
+    exp: 1800000(根据自身项目更换)
   wechat:
-    appid: appid
-    appsecret: appsecret
+    appId: appId(根据自身项目更换)
+    appSecret: appSecret(根据自身项目更换)
   upload:
-      windows: E://upload
-      linux: /home/upload
+    path: /home/upload(根据自身项目更换)
+  druid:
+    username: username(根据自身项目更换)
+    password: password(根据自身项目更换)
+    url: jdbc:mysql://localhost:3306/dbname?useUnicode=true&characterEncoding=utf8(根据自身项目更换dbname)
+    driverClassName: com.mysql.jdbc.Driver
+    filters: stat,wall
+    # 最大并发连接数
+    maxActive: 1000
+    # 初始化连接数量
+    initialSize: 10
+    # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+    timeBetweenEvictionRunsMillis: 60000
+    # 配置一个连接在池中最小生存的时间，单位是毫秒
+    minEvictableIdleTimeMillis: 180000
+    validationQuery: SELECT 'x'
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    maxOpenPreparedStatements: 20
+    # 打开removeAbandoned功能
+    removeAbandoned: true
+    # 1800秒，也就是30分钟
+    removeAbandonedTimeout: 1800
+    # 关闭abanded连接时输出错误日志
+    logAbandoned: true
 
+#日志
 logging:
   config: classpath:log4j2-online.xml
