小细节修改

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -38,12 +38,12 @@ spring:
           starttls:
             enable: true
             required: true
-  data:
-    elasticsearch:
-      cluster-nodes: 127.0.0.1:9300
-      cluster-name: elasticsearch
-      repositories:
-        enabled: true
+#  data:
+#    elasticsearch:
+#      cluster-nodes: 127.0.0.1:9300
+#      cluster-name: elasticsearch
+#      repositories:
+#        enabled: true
 
 ## Mybatis 配置
 mybatis:
