--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -65,8 +65,8 @@ example:
       path: E://upload
   druid:
     username: root
-    password: alsm
-    url: jdbc:mysql://localhost:3306/example?useUnicode=true&characterEncoding=utf8
+    password: root
+    url: jdbc:mysql://192.168.94.130:3306/example?useUnicode=true&characterEncoding=utf8
     driverClassName: com.mysql.jdbc.Driver
     filters: stat,wall,log4j2
     # 最大并发连接数
